--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "training-app",
+  "name": "cetpa_nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
+    "@next/font": "^13.0.5",
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.56.1",
+    "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "node-sass": "^8.0.0",
     "typescript": "4.9.3"
   }
 }
