--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^13.0.5",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.2",
+    "mongoose": "^6.7.5",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
