--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
+    "eslint": "^8.30.0",
     "node-sass": "^8.0.0",
     "typescript": "4.9.3"
   }
