--- a/package.json
+++ b/package.json
@@ -9,21 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.0.5",
-    "axios": "^1.2.0",
+    "@next/font": "^13.0.7",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.2",
-    "mongoose": "^6.7.5",
+    "formik": "^2.2.9",
+    "mongoose": "^6.7.3",
     "next": "13.0.3",
     "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
-    "sass": "^1.56.1",
-    "scss": "^0.2.4"
+    "sass": "^1.56.1"
   },
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "eslint": "^8.30.0",
-    "node-sass": "^8.0.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.4"
   }
 }
